Background cleanup, resulting more runtime

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,6 @@ jobs:
           git config --global user.name ${GitHubName}
           git config --global credential.helper store
           echo "https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com" > ~/.git-credentials
-      - name: Cleanup The Actions Workspace
-        uses: rokibhasansagar/slimhub_actions@main
       - name: Clone And Prepare The Mirror Repository
         run: |
           cd /home/runner
@@ -40,10 +38,11 @@ jobs:
           docker build . --rm --force-rm --compress --no-cache=true --pull --file Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/mirror-bot:${BotName}
           docker image ls
           docker push ${{ secrets.DOCKER_USERNAME }}/mirror-bot:${BotName}
-      - name: Run The Mirroring Docker Container
+      - name: Run The Mirroring Docker Container w/ Background Cleanup
         continue-on-error: true
-        timeout-minutes: 320
+        timeout-minutes: 340
         run: |
+          curl -sL https://github.com/rokibhasansagar/slimhub_actions/raw/main/cleanup.sh | bash &>/dev/null & disown
           cd /home/runner/botSource
           docker run --privileged --rm -i ${{ secrets.DOCKER_USERNAME }}/mirror-bot:${BotName}
       - name: Trigger The Looper
