--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,18 +19,22 @@ jobs:
     steps:
       - name: "Cache Git Credentials"
         run: |
+          set -xv
           git config --global user.email ${GitHubMail}
           git config --global user.name ${GitHubName}
           git config --global credential.helper store
           echo "https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com" > ~/.git-credentials
+          set +xv
       - name: Clone And Prepare The Mirror Repository
         run: |
+          set -xv
           cd /home/runner
           git clone https://${{ secrets.GH_TOKEN }}@github.com/${BotRepoSlug} --depth 1 botSource
           cd /home/runner/botSource
           curl -sL ${ConfigSlug} -o config.env
           curl -sL ${CredsSlug} -o credentials.json
           curl -sL ${PickleSlug} -o token.pickle
+          set +xv
       - name: Compile The Mirroring Docker Container
         run: |
           cd /home/runner/botSource
