--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,17 +31,19 @@ jobs:
           cd /home/runner
           git clone https://${{ secrets.GH_TOKEN }}@github.com/${BotRepoSlug} --depth 1 botSource
           cd /home/runner/botSource
-          curl -sL ${ConfigSlug}
-          curl -sL ${CredsSlug}
-          curl -sL ${PickleSlug}
+          curl -sL ${ConfigSlug} -o config.env
+          curl -sL ${CredsSlug} -o credentials.json
+          curl -sL ${PickleSlug} -o token.pickle
           set +xv
       - name: Compile The Mirroring Docker Container
         run: |
+          set -xv
           cd /home/runner/botSource
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin &>/dev/null
           docker build . --rm --force-rm --compress --no-cache=true --pull --file Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/mirror-bot:${BotName}
           docker image ls
           docker push ${{ secrets.DOCKER_USERNAME }}/mirror-bot:${BotName}
+           set +xv
       - name: Run The Mirroring Docker Container w/ Background Cleanup
         continue-on-error: true
         timeout-minutes: 340
